--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,5 +27,56 @@ body {
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: #313131;
-  border-radius: 15px;
+}
+
+#main-menu a {
+  transition: 0.313s ease;
+}
+#main-menu a .circle {
+  display: none;
+}
+#main-menu a.active {
+  transform: translateY(-10px);
+}
+#main-menu a.active .circle {
+  display: block;
+}
+
+.animation {
+  visibility: hidden;
+  opacity: 0;
+  transform: translateY(50px) scale(0.8);
+  transition: all 0.6313s ease;
+}
+.animation .text {
+  transition: all 1s ease;
+}
+
+.animation.active {
+  transform: translateY(0px) scale(1);
+  visibility: visible;
+  opacity: 1;
+}
+
+.move1 .line,
+.move1 .content {
+  background: linear-gradient(to bottom, rgba(34, 85, 250, 0.774), transparent);
+}
+
+.move2 .line,
+.move2 .content {
+  background: linear-gradient(to bottom, rgba(30, 255, 23, 0.7529411765), transparent);
+}
+
+.move3 .line,
+.move3 .content {
+  background: linear-gradient(to bottom, rgba(64, 233, 255, 0.7137254902), transparent);
+}
+
+.move.active .line {
+  height: 200px;
+}
+.move.active .content {
+  visibility: visible;
+  opacity: 1;
 }
